--- a/src/components/UI/card.module.css
+++ b/src/components/UI/card.module.css
@@ -1,4 +1,5 @@
 .card {
-  border-radius: 12px;
-  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
+  background: rgb(212, 77, 222);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  border-radius: 10px;
 }
